/*******************************************************************************
 * Copyright (c) 2013-2018 Contributors to the Eclipse Foundation
 * 
 * See the NOTICE file distributed with this work for additional
 * information regarding copyright ownership.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Apache License,
 * Version 2.0 which accompanies this distribution and is available at
 * http://www.apache.org/licenses/LICENSE-2.0.txt
 ******************************************************************************/
syntax = "proto3";
import "GeoWaveReturnTypesProtos.proto";
import "google/protobuf/timestamp.proto";
option java_multiple_files = true;
option java_package = "org.locationtech.geowave.service.grpc.protobuf";
option java_outer_classname = "VectorServiceProtos";

// Interface exported by the server.
service Vector {
  // Ingest for vector data
  rpc VectorIngest(stream VectorIngestParametersProtos) returns (stream StringResponseProtos) {}

  // Standard query for accessing vector data
  rpc VectorQuery(VectorQueryParametersProtos) returns (stream FeatureProtos) {}
  
  // The following are API-based queries that provide lower-level access for advanced users
  rpc CqlQuery(CQLQueryParametersProtos) returns (stream FeatureProtos) {}
  rpc SpatialQuery(SpatialQueryParametersProtos) returns (stream FeatureProtos) {}
  rpc SpatialTemporalQuery(SpatialTemporalQueryParametersProtos) returns (stream FeatureProtos) {}
}

// Parameters for standard vector query
message VectorQueryParametersProtos {
	string storeName = 1;	// required
	string typeName = 2;		// required
	string query = 3;		// required
}

// Base parameters needed to access data, adapter, and index stores
message VectorStoreParametersProtos {
	string storeName = 1;	// required
	string indexName = 2;		// optional	
	string typeName = 3;		// optional
}

// A CQL query string to be executed by the server
message CQLQueryParametersProtos {
  VectorStoreParametersProtos baseParams = 1;
  string cql = 2;
}

message SpatialQueryParametersProtos {
	VectorStoreParametersProtos baseParams = 1;
	bytes geometry = 2;	//ISO 19107 Geometry binary definition (WKB)
}

message SpatialTemporalQueryParametersProtos {
	SpatialQueryParametersProtos spatialParams = 1;
	repeated TemporalConstraintsProtos temporalConstraints = 2;
	string compareOperation = 3;	//see org.locationtech.geowave.core.geotime.store.filter.SpatialQueryFilter.CompareOperation for enum values to use here
}

message VectorIngestParametersProtos {
	VectorStoreParametersProtos baseParams = 1;	//this should only be set on the first feature sent to the server
	map<string, FeatureAttributeProtos> feature = 2;
}

//a feature in this case is just a map of string key value pairs (aka SimpleFeature)
message FeatureProtos {
	map<string, FeatureAttributeProtos> attributes = 1;
}

message FeatureAttributeProtos {
	string classType = 1;
	oneof value {
    string valString = 4;
    int32  valInt32 = 5;
    int64  valInt64 = 6;
    float  valFloat = 7;
    double valDouble = 8;
    //google.protobuf.Timestamp valDate = 9;
    bytes valGeometry = 10; //ISO 19107 Geometry binary definition (WKB)
  }
}

message TemporalConstraintsProtos {
	google.protobuf.Timestamp startTime = 1;
	google.protobuf.Timestamp endTime = 2;
}

